; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mednafen/mednafen-1.21/src/nes/ntsc/extr_demo.c_write_palette.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mednafen/mednafen-1.21/src/nes/ntsc/extr_demo.c_write_palette.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i8* }

@.str = private unnamed_addr constant [8 x i8] c"nes.pal\00", align 1
@.str.1 = private unnamed_addr constant [3 x i8] c"wb\00", align 1
@setup = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @write_palette to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @write_palette() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca [192 x i8], align 16
  %3 = call i32* @fopen(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.1, i64 0, i64 0))
  store i32* %3, i32** %1, align 8
  %4 = load i32*, i32** %1, align 8
  %5 = icmp ne i32* %4, null
  br i1 %5, label %6, label %12

6:                                                ; preds = %0
  %7 = getelementptr inbounds [192 x i8], [192 x i8]* %2, i64 0, i64 0
  store i8* %7, i8** getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @setup, i32 0, i32 0), align 8
  %8 = call i32 @nes_ntsc_init(i32 0, %struct.TYPE_3__* @setup)
  %9 = getelementptr inbounds [192 x i8], [192 x i8]* %2, i64 0, i64 0
  %10 = load i32*, i32** %1, align 8
  %11 = call i32 @fwrite(i8* %9, i32 192, i32 1, i32* %10)
  br label %12

12:                                               ; preds = %6, %0
  ret void
}

declare dso_local i32* @fopen(i8*, i8*) #1

declare dso_local i32 @nes_ntsc_init(i32, %struct.TYPE_3__*) #1

declare dso_local i32 @fwrite(i8*, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
